kubernetes-yaml/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: www.husnutapan.com
      http:
        paths:
          - path: /employee
            backend:
              serviceName: employee
              servicePort: 8080
